--- a/page formating.css
+++ b/page formating.css
@@ -10,11 +10,14 @@ h1{
     text-align: center;
 }
 @font-face {
-    font-family: saoFont;
+    font-family: saoFont-bold;
     src: url(../html/sao-ui/SAOUI-Bold.otf);
+
+    font-family: sao-regular;
+    src:url(../html/sao-ui/SAOUI-Regular.otf)
 }
 #pageLinkCol{
-    font-family: saoFont;
+    font-family: saoFont-bold;
     text-align: center;
     border-radius: 12px;
     border-style: solid;
