--- a/page formating.css
+++ b/page formating.css
@@ -3,7 +3,7 @@ table, th, td {
     border-collapse: collapse;
 }
 p{
-    font-family: saoFont;
+    font-family: saoFont-regular;
 }
 h1{
     font-size: 50px;
