--- a/page formating.css
+++ b/page formating.css
@@ -1,6 +1,11 @@
 table td{
     border: none;
 }
+body{
+    background-image: url(images/HD-wallpaper-dark-vertical-black-thumbnail.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 p{
     font-family: saoFont-regular;
 }
@@ -30,6 +35,7 @@ h1{
     font-size: 20px;
     color: white;
     padding:15px;
+    width: 10%;
 
     transition: opacity 0.15s;
 }
@@ -41,6 +47,7 @@ input{
     border-style: solid;
 }
 .nightMode{
+    position: fixed;
     align-self:center;
     font-size: 30px;
     border-color: white;
@@ -49,7 +56,6 @@ input{
     background-color: white;
     cursor: pointer;
 
-    position: fixed;
     top: 0px;
     right: 0px;
     transition: box-shadow 0.15s;
@@ -81,16 +87,44 @@ input{
 }
 .linksTable{
     display:inline-block;
+    width: 10%;
 }
 .linkDiv{
     font-size: 15px;
     font-family: sao-regular;
 }
 .calc{
-    display: inline-block;
-    position: fixed;
-    right: 50%;
+    margin-left: auto; 
+    margin-right: auto;
 }
 .number{
+    width: 50px;
+    height: 50px;
     background-color: white;
+}
+.operator{
+    width: 50px;
+    height: 50px;
+    background-color: white;
+}
+.equationBox{
+    text-align: center;
+    border-radius: 3px;
+}
+.content{
+    padding-left: 30%;
+    padding-right: 30%;
+    display: inline-block;
+    background-color: white;
+}
+.parent{
+    padding-top: 300px;
+    height: 200vh;
+    display: flex;
+    justify-content: center;
+
+    top: 150px;
+}
+.positionChange{
+    position: fixed;
 }
