--- a/page formating.css
+++ b/page formating.css
@@ -25,12 +25,13 @@ h1{
     font-family: sao-regular;
     src:url(../html/sao-ui/SAOUI-Regular.otf)
 }
-#pageLinkCol{
+.pageLinkCol{
     font-family: saoFont-bold;
     text-align: center;
     border-radius: 12px;
     border-style: solid;
     height: 30px;
+    width: 15%;
     background-color: green;
     font-size: 20px;
     color: white;
@@ -39,7 +40,7 @@ h1{
 
     transition: opacity 0.15s;
 }
-#pageLinkCol:hover{
+.pageLinkCol:hover{
     opacity: 0.7;
 }
 input{
@@ -86,10 +87,11 @@ input{
     opacity: 0.6;
 }
 .linksTable{
+    width: 15%;
     display:inline-block;
-    width: 10%;
 }
-.linkDiv{
+.pageLinks{
+    width: 175px;
     font-size: 15px;
     font-family: sao-regular;
 }
@@ -112,17 +114,19 @@ input{
     border-radius: 3px;
 }
 .content{
-    padding-left: 30%;
-    padding-right: 30%;
-    display: inline-block;
+    display: block;
+    align-items: center;
     background-color: white;
+    width: 70%;
 }
 .parent{
+    column-gap: 25px;
     padding-top: 100px;
     overflow: hidden;
     height: 200vh;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
 
     top: 150px;
 }
@@ -146,4 +150,7 @@ input{
     color:white;
     text-align: center;
     font-weight: bold;
+}
+.pageDescription{
+    width: 15%;
 }
