--- a/page formating.css
+++ b/page formating.css
@@ -25,7 +25,7 @@ h1{
     font-family: sao-regular;
     src:url(../html/sao-ui/SAOUI-Regular.otf)
 }
-.pageLinkCol, .pageLinkRows{
+.pageLinkCol{
     font-family: saoFont-bold;
     text-align: center;
     border-radius: 12px;
@@ -38,10 +38,19 @@ h1{
     padding:15px;
     width: 10%;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
     transition: opacity 0.15s;
 }
 .pageLinkCol:hover{
     opacity: 0.7;
+}
+.link{
+    width: 100%;
+    height: 100%;
 }
 input{
     border-radius: 10px;
