--- a/page formating2.css
+++ b/page formating2.css
@@ -2,11 +2,7 @@
     display: inline-block;
 }
 .thumbnail{
-    width: 300px;
-}
-
-.seachBox{
-    display: block;
+    width: 100%;
 }
 
 .video-preview{
@@ -52,4 +48,94 @@
     width: 100%;
     border-radius: 25px;
     vertical-align: center;
+}
+
+.root{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 16px;
+    row-gap: 40px;
+}
+
+body{
+    margin: 0px;
+}
+
+.hamburgerMenu{
+    height: 24px;
+    margin-left: 24px;
+    margin-right: 20px;
+}
+.logo{
+    height: 24px;
+}
+
+.header{
+    display: flex;
+    height: 55px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.leftSection{
+    display: flex;
+    align-items: center;
+    margin-right: 70px;
+}
+.middleSection{
+    flex: 1;
+    margin-right: 35px;
+    max-width: 500px;
+
+    display: flex;
+    align-items: center;
+}
+.rightSection{
+    width: 200px;
+    background-color: grey;
+}
+.search{
+    height: 38px;
+    width: 66px;
+
+    background-color: rgb(243, 243, 243);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192, 192, 192);
+
+    margin-left: -1;
+    margin-right: 8px;
+}
+.voice{
+    height: 39px;
+    width: 40px;
+    border-radius: 20px;
+    border-width: 1px;
+    border: none;
+    background-color: rgb(245, 245, 245);
+}
+
+.seachBar{
+    display: block;
+    height: 34px;
+    padding-left: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(192, 192, 192);
+    box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+}
+.searchBar::placeholder{
+    font-family: Roboto, Arial;
+    font-size: 16px;
+}
+
+.searchIcon{
+    margin-top: 4px;
+    height: 25px;
+    
+}
+.voiceIcon{
+    height: 24px;
+    margin-top: 4px
 }
