added base of side bar

--- a/page formating2.css
+++ b/page formating2.css
@@ -159,3 +159,11 @@ body{
     height: 35px;
     margin-right: 9px;
 }
+.sidebar{
+    width: 280px;
+    background-color: gray;
+}
+.pageRoot{
+    display: flex;
+    column-gap: 7px;
+}
