--- a/page formating2.css
+++ b/page formating2.css
@@ -1,14 +1,9 @@
-.video-preview{
-    display: inline-block;
-}
+
 .thumbnail{
     width: 100%;
 }
 
-.video-preview{
-    vertical-align: top;
-    display: inline-block;
-}
+
 
 .videoInfo{
     display: grid;
@@ -51,14 +46,24 @@
 }
 
 .root{
+    right: 55px;
     display: grid;
+    width: 100%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+    background-color: rgb(249, 249, 249);
+    border-top: 2px;
+    border-top-style: solid;
+    border-top-color: rgb(190, 190, 190);
+    border-top-width: 1px;
+    padding: 20px;
 }
 
 body{
+    padding-top: 55px;
     margin: 0px;
+    padding-left: 75px;
 }
 
 .hamburgerMenu{
@@ -69,13 +74,21 @@ body{
 .logo{
     height: 24px;
 }
+.logo:hover{
+    cursor: pointer;
+}
 
 .header{
+    position: fixed;
+    background-color: white;
     display: flex;
     height: 55px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    left: 0px;
+    right: 0px;
+    top: 0px;
 }
 .leftSection{
     display: flex;
@@ -95,7 +108,8 @@ body{
     width: 200px;
     vertical-align: top;
     align-items: center;
-    justify-content: end;
+    justify-content: space-around;
+    flex-shrink: 0;
 }
 .search{
     height: 38px;
@@ -109,6 +123,26 @@ body{
     margin-left: -1;
     margin-right: 8px;
 }
+.search .tooltip, .voice .tooltip{
+    position: absolute;
+    background-color: rgb(99, 99, 99);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 5px;
+    padding-right: 5px;
+    bottom: -50px;
+    border-radius: 6px;
+    opacity: 0;
+    pointer-events: none;
+    color: white;
+    white-space: nowrap;
+    
+    transition: opacity 0.15s;
+}
+.search:hover .tooltip, .voice:hover .tooltip{
+    opacity: 0.7;
+}
+
 .voice{
     height: 39px;
     width: 40px;
@@ -116,6 +150,39 @@ body{
     border-width: 1px;
     border: none;
     background-color: rgb(245, 245, 245);
+}
+
+.search, .voice{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.uploadIcons, .appsIcon, .notIcons, .channelIcon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.uploadIcons .tooltip, .appsIcon .tooltip, .notIcons .tooltip, .channelIcon .tooltip{
+    position: absolute;
+    background-color: rgb(99, 99, 99);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 5px;
+    padding-right: 5px;
+    bottom: -50px;
+    border-radius: 6px;
+    opacity: 0;
+    pointer-events: none;
+    color: white;
+    white-space: nowrap;
+    
+    transition: opacity 0.15s;
+}
+.uploadIcons:hover .tooltip, .channelIcon:hover .tooltip, .appsIcon:hover .tooltip, .notIcons:hover .tooltip{
+    opacity: 0.7;
 }
 
 .seachBar{
@@ -127,6 +194,8 @@ body{
     border-style: solid;
     border-color: rgb(192, 192, 192);
     box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+    flex: 1;
+    width: 0;
 }
 .searchBar::placeholder{
     font-family: Roboto, Arial;
@@ -160,10 +229,41 @@ body{
     margin-right: 9px;
 }
 .sidebar{
-    width: 280px;
-    background-color: gray;
+    position: fixed;
+    flex-direction: column;
+    width: 75px;
+    justify-content: start;
+    align-items: center;
+    top: 55px;
+    bottom: 0px;
+    left: 0px;
+    display: flex;
 }
+
 .pageRoot{
     display: flex;
-    column-gap: 7px;
+}
+
+.sideButton{
+    height: 75px;
+    width: 75px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+
+    transition: background-color 0.1s;
+}
+.sideButton:hover{
+    background-color: rgb(221, 221, 221);
+    cursor: pointer;
+}
+.sideButton img{
+    height: 30px;
+    align-self: center;
+    padding-bottom: 5px;
+}
+.sideButton p{
+    font-size: 10px;
+    font-family: Roboto, Arial;
+    text-align: center;
 }
