--- a/page4Styles.css
+++ b/page4Styles.css
@@ -10,6 +10,7 @@
 .header{
     display: flex;
     justify-content: space-around;
+    flex-direction: row;
 }
 
 .links{
@@ -27,4 +28,205 @@
 .content{
     display: flex;
     padding-top: 30px;
+    justify-content: start;
+    column-gap: 10px;
+}
+
+
+.profilePicture{
+    margin-top: 12px;
+    width: 100%;
+    border-radius: 25px;
+    vertical-align: center;
+}
+
+
+.hamburgerMenu{
+    height: 24px;
+    margin-left: 24px;
+    margin-right: 20px;
+}
+.logo{
+    height: 24px;
+}
+.logo:hover{
+    cursor: pointer;
+}
+
+.header{
+    position: fixed;
+    background-color: rgb(15, 15, 15);
+    display: flex;
+    height: 55px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+}
+.leftSection{
+    display: flex;
+    align-items: center;
+    margin-right: 70px;
+}
+.middleSection{
+    flex: 1;
+    margin-right: 35px;
+    max-width: 500px;
+
+    display: flex;
+    align-items: center;
+}
+.rightSection{
+    display: flex;
+    width: 200px;
+    vertical-align: top;
+    align-items: center;
+    justify-content: space-around;
+    flex-shrink: 0;
+}
+.search{
+    height: 38px;
+    width: 66px;
+
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+
+    background-color: rgb(34, 34, 34);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(48, 48, 48);
+
+    margin-left: -1;
+    margin-right: 8px;
+}
+.search .tooltip, .voice .tooltip{
+    position: absolute;
+    background-color: rgb(99, 99, 99);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 5px;
+    padding-right: 5px;
+    bottom: -50px;
+    border-radius: 6px;
+    opacity: 0;
+    pointer-events: none;
+    color: white;
+    white-space: nowrap;
+    
+    transition: opacity 0.15s;
+}
+.search:hover .tooltip, .voice:hover .tooltip{
+    opacity: 0.7;
+}
+
+.voice{
+    height: 39px;
+    width: 40px;
+    border-radius: 20px;
+    border-width: 1px;
+    border: none;
+    background-color: rgb(15, 15, 15);
+}
+
+.search, .voice{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.uploadIcons, .appsIcon, .notIcons, .channelIcon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.uploadIcons .tooltip, .appsIcon .tooltip, .notIcons .tooltip, .channelIcon .tooltip{
+    position: absolute;
+    background-color: rgb(15, 15, 15);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 5px;
+    padding-right: 5px;
+    bottom: -50px;
+    border-radius: 6px;
+    opacity: 0;
+    pointer-events: none;
+    color: white;
+    white-space: nowrap;
+    
+    transition: opacity 0.15s;
+}
+.uploadIcons:hover .tooltip, .channelIcon:hover .tooltip, .appsIcon:hover .tooltip, .notIcons:hover .tooltip{
+    opacity: 0.7;
+}
+
+.seachBar{
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+
+    display: block;
+    height: 34px;
+    padding-left: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(48, 48, 48);
+    box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+    flex: 1;
+    width: 0;
+
+    background-color: rgb(15, 15, 15);
+}
+.searchBar::placeholder{
+    font-family: Roboto, Arial;
+    font-size: 16px;
+}
+
+.searchIcon{
+    margin-top: 4px;
+    height: 25px;
+    
+}
+.voiceIcon{
+    height: 24px;
+    margin-top: 4px
+}
+
+.upload{
+    height: 30px;
+    margin-right: 9px;
+}
+.notifications{
+    height: 30px;
+    margin-right: 9px;
+}
+.apps{
+    height: 30px;
+    margin-right: 9px;
+}
+.myChannel{
+    border-radius: 50px;
+    height: 35px;
+    margin-right: 9px;
+}
+
+body{
+    background-color: rgb(15, 15, 15);
+    padding-top:55px;
+}
+
+.video{
+    background-color: white;
+    height: 3vh;
+    margin-left: 24px;
+}
+.others{
+    background-color: red;
+    height: 3vh;
+    color: wheat;
+    margin-right:24px;
 }
