--- a/page4.css
+++ b/page4.css
@@ -11,6 +11,7 @@ body{
     height: 200%;
     width: 100%;
     margin: 0px;
+    margin-top: 55px;
 }
 
 .head{
@@ -71,4 +72,12 @@ body{
 }
 .iframe{
     width: 75%;
+}
+.navigation{
+    font-family: saoFont-Bold;
+    background-color: rgb(0, 87, 0);
+    color:white
+}
+.naviagtion tr a{
+    color:white;
 }
